--- a/clickup-frontend/public/index.html
+++ b/clickup-frontend/public/index.html
@@ -22,7 +22,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- ✅ TAB TITLE -->
-    <title>Eternal Robotics – ClickUp Dashboard</title>
+    <title>Hypervise – ClickUp Dashboard</title>
   </head>
 
   <body>
